--- a/Relvise/index.html
+++ b/Relvise/index.html
@@ -4,11 +4,32 @@
 	<meta charset="UTF-8">	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Relvise</title>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800&display=swap" rel="stylesheet" />
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="wrapper">
-
+		<header class="header">
+			<div class="header__container _container">
+				<a href="" class="header__logo">Relvise</a>
+				<nav class="header__menu menu">
+					<ul class="menu_list">
+						<li class="menu__item">
+							<a href="" class="menu__link">Home</a>
+						</li>
+						<li class="menu__item">
+							<a href="" class="menu__link">Product</a>
+						</li>
+						<li class="menu__item">
+							<a href="" class="menu__link">Pricing</a>
+						</li>
+						<li class="menu__item">
+							<a href="" class="menu__link">Contact</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</header>
 	</div>	
 </body>
 </html>
