--- a/Relvise/index.html
+++ b/Relvise/index.html
@@ -30,6 +30,26 @@
 				</nav>
 			</div>
 		</header>
+		<main class="page">
+			<div class="page__mainblock mainblock">
+				<div class="mainblock__container _container">
+					<div class="mainblock__body">
+						<h1 class="mainblock__title">Finance and Consultancy Solution</h1>
+						<div class="mainblock__text">We know how large objects will act, but things on a small scale.</div>
+						<div class="mainblock__buttons">
+							<a href="" class="mainblock__button">Get Quote Now</a>
+							<a href="" class="mainblock__button mainblock__button_border">Learn More</a>
+						</div>
+					</div>
+				</div>
+				<div class="mainblock__image _ibg">
+					<img src="img/mainblock/cover.jpg" alt="cover">
+				</div>
+			</div>
+		</main>
+		<footer class="footer">
+			Это футер
+		</footer>
 	</div>	
 </body>
 </html>
