--- a/index.html
+++ b/index.html
@@ -51,18 +51,16 @@
 					<div class="services__body">
 						<div class="services__column">
 							<div class="services__item item-service">
-								<div class="item-service__icon"></div>
-								<h3 class="item-service__title"></h3>
-								<div class="item-service__text"></div>
+								<div class="item-service__icon"><img src="img/services/01.svg" alt="Environmental Consulting"></div>
+								<h3 class="item-service__title">Environmental Consulting</h3>
+								<div class="item-service__text">We focus on ergonomics and meeting you where you work. </div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
 		</main>
-		<footer class="footer">
-			Это футер
-		</footer>
+		<footer class="footer">Это футер</footer>
 	</div>	
 </body>
 </html>
