--- a/Relvise/index.html
+++ b/Relvise/index.html
@@ -37,7 +37,7 @@
 						<h1 class="mainblock__title">Finance and Consultancy Solution</h1>
 						<div class="mainblock__text">We know how large objects will act, but things on a small scale.</div>
 						<div class="mainblock__buttons">
-							<a href="" class="mainblock__button">Get Quote Now</a>
+							<a href="" class="mainblock__button mainblock__button_orange">Get Quote Now</a>
 							<a href="" class="mainblock__button mainblock__button_border">Learn More</a>
 						</div>
 					</div>
@@ -46,10 +46,35 @@
 					<img src="img/mainblock/cover.jpg" alt="cover">
 				</div>
 			</div>
+			<section class="page__services services">
+				<div class="services__container _container">
+					<div class="services__body">
+						<div class="services__column">
+							<div class="services__item item-service">
+								<div class="item-service__icon"><img src="img/services/01.svg" alt="Environmental Consulting"></div>
+								<h3 class="item-service__title">Environmental Consulting</h3>
+								<div class="item-service__text">We focus on ergonomics and meeting you where you work.</div>
+							</div>
+						</div>
+						<div class="services__column">
+							<div class="services__item item-service">
+								<div class="item-service__icon"><img src="img/services/02.svg" alt="Finance and consultancy "></div>
+								<h3 class="item-service__title">Finance and consultancy </h3>
+								<div class="item-service__text">Just type what's on your mind and we'll get you there.</div>
+							</div>
+						</div>
+						<div class="services__column">
+							<div class="services__item item-service item-service_green">
+								<div class="item-service__icon"><img src="img/services/03.svg" alt="Financial Services Consulting"></div>
+								<h3 class="item-service__title">Financial Services	Consulting</h3>
+								<div class="item-service__text">The quick fox jumps over the lazy dog</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
-		<footer class="footer">
-			Это футер
-		</footer>
+		<footer class="footer">Это футер</footer>
 	</div>	
 </body>
 </html>
