Add block 'Who We Are'

--- a/index.html
+++ b/index.html
@@ -173,6 +173,43 @@
 					</div>
 				</div>				
 			</section>
+			<section class="page__whoweare whoweare">
+				<div class="whoweare__container _container">
+					<div class="whoweare__header header-block">
+						<h2 class="header-block__title">Who We Are</h2>
+						<div class="header-block__subtitle">Problems trying to resolve the conflict between the two major realms <br> of Classical physics: Newtonian mechanics</div>
+					</div>
+					<div class="whoweare__body">
+						<div class="whoweare__video"></div>
+						<div class="whoweare__content">
+							<h2 class="content__title">Most trusted in our field</h2>
+							<div class="content__text">Most calendars are designed for teams. Slate	is designed for freelancers who want a simple way to plan their schedule.</div>
+							<div class="content__items">
+								<div class="content__item item-content">
+									<div class="item-content__icon">
+										<img src="img/whoweare/01.svg" alt="THE quick fox jumps over the lazy dog">
+									</div>
+									<div class="item-content__body">
+										<div class="item-content__title">THE quick fox jumps over the lazy dog</div>
+										<div class="item-content__text">Things on a very small scale ...</div>
+									</div>
+								</div>
+							</div>						
+							<div class="content__items">
+								<div class="content__item item-content">
+									<div class="item-content__icon">
+										<img src="img/whoweare/02.svg" alt="the quick fox jumps over the lazy dog">
+									</div>
+									<div class="item-content__body">
+										<div class="item-content__title">the quick fox jumps over the lazy dog</div>
+										<div class="item-content__text">Things on a very small scale ...</div>
+									</div>
+								</div>
+							</div>						
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">Это футер</footer>
 	</div>	
