--- a/index.html
+++ b/index.html
@@ -180,32 +180,34 @@
 						<div class="header-block__subtitle">Problems trying to resolve the conflict between the two major realms <br> of Classical physics: Newtonian mechanics</div>
 					</div>
 					<div class="whoweare__body">
-						<div class="whoweare__video"></div>
+						<div class="whoweare__video">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/0UUK4VDblXM"
+							title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div>
 						<div class="whoweare__content">
-							<h2 class="content__title">Most trusted in our field</h2>
-							<div class="content__text">Most calendars are designed for teams. Slate	is designed for freelancers who want a simple way to plan their schedule.</div>
-							<div class="content__items">
-								<div class="content__item item-content">
-									<div class="item-content__icon">
+							<h2 class="whoweare__title">Most trusted in our field</h2>
+							<div class="whoweare__text">Most calendars are designed for teams. Slate	is designed for freelancers who want a simple way to plan their schedule.</div>
+							<div class="whoweare__items">
+								<div class="whoweare__item item-whoweare">
+									<div class="item-whoweare__icon">
 										<img src="img/whoweare/01.svg" alt="THE quick fox jumps over the lazy dog">
 									</div>
-									<div class="item-content__body">
-										<div class="item-content__title">THE quick fox jumps over the lazy dog</div>
-										<div class="item-content__text">Things on a very small scale ...</div>
+									<div class="item-whoweare__body">
+										<div class="item-whoweare__title">THE quick fox jumps over the lazy dog</div>
+										<div class="item-whoweare__text">Things on a very small scale ...</div>
 									</div>
 								</div>
-							</div>						
-							<div class="content__items">
-								<div class="content__item item-content">
-									<div class="item-content__icon">
+								<div class="whoweare__item item-whoweare">
+									<div class="item-whoweare__icon">
 										<img src="img/whoweare/02.svg" alt="the quick fox jumps over the lazy dog">
 									</div>
-									<div class="item-content__body">
-										<div class="item-content__title">the quick fox jumps over the lazy dog</div>
-										<div class="item-content__text">Things on a very small scale ...</div>
+									<div class="item-whoweare__body">
+										<div class="item-whoweare__title">the quick fox jumps over the lazy dog</div>
+										<div class="item-whoweare__text">Things on a very small scale ...</div>
 									</div>
 								</div>
 							</div>						
+													
 						</div>
 					</div>
 				</div>
