--- a/index.html
+++ b/index.html
@@ -236,7 +236,17 @@
 					</div>
 				</div>
 			</div>
-
+			<section class="page__subscribe subscribe">
+				<div class="subscribe__container _container">
+					<div class="subscribe__body">
+						<h4 class="subscribe__title">Subscribe For Latest Newsletter</h4>
+						<form action="#" class="subscribe__form">
+							<input autocomplete="off" type="email" required name="form[]" class="subscribe__input" placeholder="Your Email">
+							<button class="subscribe__button" type="submit">Subscribe</button>
+						</form>						
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">Это футер</footer>
 	</div>	
