--- a/index.html
+++ b/index.html
@@ -255,10 +255,31 @@
 					</div>
 					<div class="getintouch__items">
 						<div class="getintouch__item item-getintouch">
-							<div class="item-getintouch__icon"></div>
-							<div class="item-getintouch__emails"></div>
-							<div class="item-getintouch__label"></div>
-							<div class="item-getintouch__button"></div>
+							<div class="item-getintouch__icon"><img src="img/getintouch/01.svg" alt="get in touch"></div>
+							<div class="item-getintouch__emails">
+								<a href="mailto:georgia.young@example.com" class="item-getintouch__email">georgia.young@example.com</a>
+								<a href="mailto:georgia.young@ple.com" class="item-getintouch__email">georgia.young@ple.com</a>
+							</div>
+							<div class="item-getintouch__label">Get Support</div>
+							<div class="item-getintouch__button">Submit Request</div>
+						</div>
+						<div class="getintouch__item item-getintouch">
+							<div class="item-getintouch__icon"><img src="img/getintouch/01.svg" alt="get in touch"></div>
+							<div class="item-getintouch__emails">
+								<a href="mailto:georgia.young@example.com" class="item-getintouch__email">georgia.young@example.com</a>
+								<a href="mailto:georgia.young@ple.com" class="item-getintouch__email">georgia.young@ple.com</a>
+							</div>
+							<div class="item-getintouch__label">Get Support</div>
+							<div class="item-getintouch__button">Submit Request</div>
+						</div>
+						<div class="getintouch__item item-getintouch">
+							<div class="item-getintouch__icon"><img src="img/getintouch/01.svg" alt="get in touch"></div>
+							<div class="item-getintouch__emails">
+								<a href="mailto:georgia.young@example.com" class="item-getintouch__email">georgia.young@example.com</a>
+								<a href="mailto:georgia.young@ple.com" class="item-getintouch__email">georgia.young@ple.com</a>
+							</div>
+							<div class="item-getintouch__label">Get Support</div>
+							<div class="item-getintouch__button">Submit Request</div>
 						</div>
 					</div>
 				</div>
