--- a/index.html
+++ b/index.html
@@ -263,6 +263,24 @@
 							<div class="item-getintouch__label">Get Support</div>
 							<div class="item-getintouch__button">Submit Request</div>
 						</div>
+						<div class="getintouch__item item-getintouch item-getintouch_active">
+							<div class="item-getintouch__icon"><img src="img/getintouch/02.svg" alt="get in touch"></div>
+							<div class="item-getintouch__emails">
+								<a href="mailto:georgia.young@example.com" class="item-getintouch__email">georgia.young@example.com</a>
+								<a href="mailto:georgia.young@ple.com" class="item-getintouch__email">georgia.young@ple.com</a>
+							</div>
+							<div class="item-getintouch__label">Get Support</div>
+							<div class="item-getintouch__button">Submit Request</div>
+						</div>
+						<div class="getintouch__item item-getintouch">
+							<div class="item-getintouch__icon"><img src="img/getintouch/03.svg" alt="get in touch"></div>
+							<div class="item-getintouch__emails">
+								<a href="mailto:georgia.young@example.com" class="item-getintouch__email">georgia.young@example.com</a>
+								<a href="mailto:georgia.young@ple.com" class="item-getintouch__email">georgia.young@ple.com</a>
+							</div>
+							<div class="item-getintouch__label">Get Support</div>
+							<div class="item-getintouch__button">Submit Request</div>
+						</div>
 					</div>
 				</div>
 			</section>
